// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VidSrc handle imdb black mirror s4e2 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "en",
      ],
    },
    "url": "https://vidsrc.xyz/embed/tv/tt2085059/4/2",
  },
]
`;

exports[`VidSrc handle imdb full metal jacket 1`] = `
[
  {
    "meta": {
      "countryCodes": [
        "en",
      ],
    },
    "url": "https://vidsrc.xyz/embed/movie/tt0093058",
  },
]
`;
